# simpleSVG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/elliptical_arc/: CMakeLists.txt  main.cpp
examples/forbidden_minors/: main.cpp
examples/groups/: main.cpp
examples/hole_polygon/: main.cpp
examples/holed_polygon/: main.cpp
examples/markers/: main.cpp
examples/penrose_tiles/: main.cpp
examples/wang_tiles/: main.cpp
include/: simpleSVG.hpp
src/: SVGFile.cpp  SVGFile.hpp  SVGMarker.cpp  SVGMarker.hpp  SVGPath.cpp  SVGPath.hpp  SVGPathCommand.cpp  SVGPathCommand.hpp  SVGPathStyle.cpp  SVGPathStyle.hpp  main.cpp  simpleSVG.hpp
